syntax = "proto3";

package data_base;

message RouterSettings {
	int32 bus_wait_time = 1;
	double bus_velocity = 2;
}
